# devexp

./: .env.example  .gitignore  README.md  README_zh.md  pyproject.toml
.github/workflows/: validate.yml
plugins/devexp/: README.md
plugins/devexp/.codex-plugin/: plugin.json
plugins/devexp/scripts/: install_cli.py
plugins/devexp/skills/record-engineering-experience/: SKILL.md
plugins/devexp/skills/record-engineering-experience/references/: sync-payloads.md  templates.md
plugins/devexp/skills/record-engineering-experience/scripts/: devexp.py  export_payloads.py  validate_devexp.py
record-engineering-experience/: SKILL.md
record-engineering-experience/agents/: openai.yaml
record-engineering-experience/scripts/: devexp.py  init_devexp.py  new_record.py  sync_common.py  sync_feishu.py  sync_notion.py
tools/: validate_repo.py
